# monitoring-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  install.ps1  install.sh  llms.txt  pyproject.toml
.claude/skills/evm-expert/: SKILL.md
.claude/skills/evm-expert/references/: account-abstraction.md  contract-addresses.md  cross-chain.md  defi-protocols.md  evm-internals.md  multi-chain.md  oracles.md  project-integration.md  proxies.md  rpc-and-tracing.md  security-toolchain.md  solidity-patterns.md  tooling.md
.claude/skills/protocol-research/: SKILL.md
.github/workflows/: lint.yml  release.yml  ruff.yml
monitoring_cli/: __main__.py  auth.py  cli.py  client.py  config.py  output.py
monitoring_cli/skills/: SKILL.md
monitoring_cli/skills/references/: deploy-playbook.md  handoff-schemas.md  review-criteria.md
monitoring_cli/skills/references/agents/: reviewer.md  web-fallback.md
monitoring_cli/skills/references/database/: decode_primitives.md  macros.md  query_patterns.md
monitoring_cli/skills/references/database/sample_queries/: common_query_patterns.md
monitoring_cli/skills/references/protocols/: INDEX.md
monitoring_cli/skills/references/protocols/40acres/: core.md
monitoring_cli/skills/references/protocols/aave/: v1.md  v2.md  v3.md  v4.md
monitoring_cli/skills/references/protocols/across/: core.md
monitoring_cli/skills/references/protocols/aerodrome/: amm.md  slipstream.md
monitoring_cli/skills/references/protocols/agave/: core.md
monitoring_cli/skills/references/protocols/agglayer/: core.md
monitoring_cli/skills/references/protocols/allbridge/: README.md  classic.md  core.md
monitoring_cli/skills/references/protocols/angstrom/: core.md
monitoring_cli/skills/references/protocols/apeswap/: core.md
monitoring_cli/skills/references/protocols/arbitrum_native/: core.md
monitoring_cli/skills/references/protocols/arrakis/: README.md  modular.md  v1.md  v2.md
monitoring_cli/skills/references/protocols/avalanche_c_bitcoin/: core.md
monitoring_cli/skills/references/protocols/avalanche_c_native/: core.md
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_integration.py  test_output.py
(+184 files in other folders)
