[project]
name = "monitoring-cli"
version = "0.1.0"
description = "CLI for Dedaub Monitoring API"
requires-python = ">=3.13,<3.14"
dependencies = [
    "typer>=0.25.1,<0.26",
    "httpx>=0.27.0,<0.28",
    "rich>=13.0.0,<14",
]

[project.scripts]
dedaub-monitoring = "monitoring_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-mock>=3.14.0,<4",
    "respx>=0.21.0,<0.22",
]
lint = [
    "ruff>=0.15.15,<0.16",
    "ty>=0.0.42,<0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "lint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
