[project]
name = "monitoring-cli"
version = "0.2.0"
description = "CLI for Dedaub Monitoring API"
requires-python = ">=3.13,<3.14"
dependencies = [
    "typer>=0.25.1,<0.26",
    "httpx>=0.27.0,<0.28",
    "rich>=13.0.0,<14",
    "prompt_toolkit>=3.0.0,<4",
]

[project.scripts]
dedaub-monitoring = "monitoring_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-mock>=3.14.0,<4",
    "respx>=0.21.0,<0.22",
]
lint = [
    "ruff>=0.15.15,<0.16",
    "ty>=0.0.42,<0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicit package selection: monitoring_cli has no __init__.py (PEP 420
# namespace package), so hatchling's auto-detection can't find it. This also
# ships the bundled skills/*.md resources loaded via importlib.resources.
[tool.hatch.build.targets.wheel]
packages = ["monitoring_cli"]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
target-version = "py313"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501: long lines are almost all Typer --help strings, kept on one line for readability.
# B904: the pervasive `raise typer.Exit(1)` inside except is intentional control flow,
#       not error-swallowing (real error wrapping already chains with `from`).
ignore = ["E501", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
